Prevent text wrap in header file/folder buttons

--- a/css/layout.css
+++ b/css/layout.css
@@ -64,6 +64,10 @@
   gap: var(--gutter);
 }
 
+.l-horz-list > fieldset {
+  min-width: 0;
+}
+
 .l-horz-list-center,
 .l-horz-list-center .l-horz-list-header {
   margin-right: auto;
